src/test/deca/context/invalid/provided/selection_protected.deca
//Resultats :
//Erreur contextuelle
//Ligne 10 : can't acces this field from main
class A {
 protected int x = 0;
}

{
A a = new A();
int y = a.x;
}
